sourcegraph-namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  labels:
    name: sourcegraph
  name: sourcegraph
